cssmedia query sed adn set some defult css more

--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
+    <title>Gamer</title>
 </head>
 <body>
-    
+    <header class="container">
+        <nav class="d-flex jus-con-space-between ali-item-center">
+            <div class="site-icon">
+                <img src="" alt="">
+                <h2> <span>g</span>amer</h2>
+            </div>
+            <div class="nav-menu">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Developers</a></li>
+                    <li><button>Follow Us On 
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-tiktok"></i>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
