profile icon set

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="container">
         <nav class="d-flex jus-con-space-between ali-item-center">
-            <div class="site-icon">
-                <img src="" alt="">
+            <div class="site-icon d-flex jus-con-center ali-item-center">
+                <img src="images/Frame.png" alt="Game Icon">
                 <h2> <span>g</span>amer</h2>
             </div>
             <div class="nav-menu">
