nav section add and banner mark up

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <title>Gamer</title>
 </head>
 <body>
-    <header class="container">
-        <nav class="d-flex jus-con-space-between ali-item-center">
+    <header>
+        <!-- nav section style -->
+        <nav class="nav-section container d-flex jus-con-space-between ali-item-center">
             <div class="site-icon d-flex jus-con-center ali-item-center">
                 <img src="images/Frame.png" alt="Game Icon">
                 <h2> <span>g</span>amer</h2>
             </div>
             <div class="nav-menu">
-                <ul>
+                <ul class="d-flex ali-item-center jus-con-center">
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Developers</a></li>
-                    <li><button>Follow Us On 
+                    <li><button class="nave-socil-button d-flex jus-con-center ali-item-center" >Follow Us On 
                         <i class="fa-brands fa-youtube"></i>
                         <i class="fa-brands fa-tiktok"></i>
                         </button>
@@ -30,7 +31,19 @@
         </nav>
 
     </header>
-    <main>
+    <main class="container">
+        <section>
+            <div class="banner-section">
+                <div>
+                    <h2></h2>
+                    <h3></h3>
+                </div>
+                <div class="banner-img">
+                    <img src="images/" alt="">
+                </div>
+            </div>
+        </section>
+
 
     </main>
     <footer>
