banner section add

--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
     </header>
     <main class="container">
         <section>
-            <div class="banner-section">
-                <div>
-                    <h2></h2>
-                    <h3></h3>
+            <div class="banner-section d-flex jus-con-space-between ali-item-center">
+                <div class="banner-information">
+                    <h2>Play Like The</h2>
+                    <h3>G.O.A.T.</h3>
+                    <p class="custom-icon"><i class="fa-solid fa-play"></i> 1-Click instant play</p>
+                    <p><i class="fa-solid fa-download"></i> No Download</p>
+                    <p class="banner-item"><i class="fa-solid fa-users"></i> 1000s of supported online games</p>
+                    <button class="pinmary-btn">sign in</button>
+                    <button class="pinmary-btn secend-btn">go rogue</button>
                 </div>
                 <div class="banner-img">
-                    <img src="images/" alt="">
+                    <img src="images/Group 18.png" alt="Gamming Group">
                 </div>
             </div>
         </section>
