hero section add on my site

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </nav>
 
     </header>
-    <main class="container">
-        <section>
+    <main>
+        <!-- banner section  -->
+        <section class="container">
             <div class="banner-section d-flex jus-con-space-between ali-item-center">
                 <div class="banner-information">
                     <h2>Play Like The</h2>
@@ -45,6 +46,26 @@
                 </div>
                 <div class="banner-img">
                     <img src="images/Group 18.png" alt="Gamming Group">
+                </div>
+            </div>
+        </section>
+
+        <!-- hero section -->
+        <section class="hero-bg">
+            <div class="hero-section d-flex jus-con-space-between ali-item-center container">
+                <div>
+                    <img src="images/pngwing 4.png" alt="Gamer Group">
+                </div>
+
+                <div class="hero-information-sectio">
+                    <h2>We are gamer</h2>
+                    <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.
+                    </p>
+                    <button class="pinmary-btn">know more</button>
+                    <h3>Our purpose... <br>
+                       <span>“unleash the gamer in everyone”</span>
+                    </h3>
+
                 </div>
             </div>
         </section>
