product section add na style

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
         <!-- hero section -->
         <section class="hero-bg">
-            <div class="hero-section d-flex jus-con-space-between ali-item-center container">
-                <div>
+            <div class="hero-section d-flex jus-con-space-between ali-item-center container ">
+                <div class="main-margin">
                     <img src="images/pngwing 4.png" alt="Gamer Group">
                 </div>
 
-                <div class="hero-information-sectio">
+                <div class="hero-information-sectio main-margin">
                     <h2>We are gamer</h2>
                     <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.
                     </p>
@@ -67,6 +67,42 @@
                     </h3>
 
                 </div>
+            </div>
+        </section>
+
+        <!-- site prodact section -->
+        <section class="container">
+            <div class="our-product d-flex jus-con-center ali-item-center main-margin">
+                <h2>Online Games <span>Funny Videos</span></h2>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+
+                <div class="products d-flex jus-con-center ali-item-center">
+                    <div class="d-flex">
+                        <div>
+                            <img src="images/Rectangle 4.png" alt="Vortex">
+                        </div> 
+                        <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="d-flex">
+                        <div>
+                        <img src="images/Rectangle 5.png" alt="Dinoshor Games">
+                        </div>
+                        <p>Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="d-flex">
+                        <div>
+                        <img src="images/Rectangle 7.png" alt="Mini Uardians">
+                        </div>
+                        <p>Breaking game records like OG</p>
+                    </div>
+                    <div class="d-flex">
+                        <div>
+                        <img src="images/Rectangle 6.png" alt="Looney Tunes Mayhem">
+                        </div>
+                        <p>Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </div>
+
             </div>
         </section>
 
