product hover style set

--- a/index.html
+++ b/index.html
@@ -79,24 +79,40 @@
                 <div class="products d-flex jus-con-center ali-item-center">
                     <div class="d-flex">
                         <div>
+                                <div class="hover-icon d-flex ali-item-center jus-con-center">
+                                    <i class="fa-solid fa-circle-play"></i>
+                                    <a href="#">Watch Now</a>
+                                </div>
                             <img src="images/Rectangle 4.png" alt="Vortex">
                         </div> 
                         <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                     </div>
                     <div class="d-flex">
                         <div>
+                            <div class="hover-icon d-flex ali-item-center jus-con-center">
+                                <i class="fa-solid fa-circle-play"></i>
+                                <a href="#">Watch Now</a>
+                            </div>
                         <img src="images/Rectangle 5.png" alt="Dinoshor Games">
                         </div>
                         <p>Did you score? #unblockedgames #school</p>
                     </div>
                     <div class="d-flex">
                         <div>
+                            <div class="hover-icon d-flex ali-item-center jus-con-center">
+                                <i class="fa-solid fa-circle-play"></i>
+                                <a href="#">Watch Now</a>
+                            </div>
                         <img src="images/Rectangle 7.png" alt="Mini Uardians">
                         </div>
                         <p>Breaking game records like OG</p>
                     </div>
                     <div class="d-flex">
                         <div>
+                            <div class="hover-icon d-flex ali-item-center jus-con-center">
+                                <i class="fa-solid fa-circle-play"></i>
+                                <a href="#">Watch Now</a>
+                            </div>
                         <img src="images/Rectangle 6.png" alt="Looney Tunes Mayhem">
                         </div>
                         <p>Busted gaming on school laptop, but you are still lit.</p>
