careers section done

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
     <title>Gamer</title>
 </head>
+
 <body>
     <header>
         <!-- nav section style -->
@@ -21,9 +25,9 @@
                 <ul class="d-flex ali-item-center jus-con-center">
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Developers</a></li>
-                    <li><button class="nave-socil-button d-flex jus-con-center ali-item-center" >Follow Us On 
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-tiktok"></i>
+                    <li><button class="nave-socil-button d-flex jus-con-center ali-item-center">Follow Us On
+                            <i class="fa-brands fa-youtube"></i>
+                            <i class="fa-brands fa-tiktok"></i>
                         </button>
                     </li>
                 </ul>
@@ -59,11 +63,13 @@
 
                 <div class="hero-information-sectio main-margin">
                     <h2>We are gamer</h2>
-                    <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.
+                    <p>An international digital games and entertainment company. We develop, publish and distribute
+                        multiplayer mobile games. We reach over 400 million players each month and our audience keeps
+                        growing.
                     </p>
                     <button class="pinmary-btn">know more</button>
                     <h3>Our purpose... <br>
-                       <span>“unleash the gamer in everyone”</span>
+                        <span>“unleash the gamer in everyone”</span>
                     </h3>
 
                 </div>
@@ -79,12 +85,12 @@
                 <div class="products d-flex jus-con-center ali-item-center">
                     <div class="d-flex">
                         <div>
-                                <div class="hover-icon d-flex ali-item-center jus-con-center">
-                                    <i class="fa-solid fa-circle-play"></i>
-                                    <a href="#">Watch Now</a>
-                                </div>
+                            <div class="hover-icon d-flex ali-item-center jus-con-center">
+                                <i class="fa-solid fa-circle-play"></i>
+                                <a href="#">Watch Now</a>
+                            </div>
                             <img src="images/Rectangle 4.png" alt="Vortex">
-                        </div> 
+                        </div>
                         <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                     </div>
                     <div class="d-flex">
@@ -93,7 +99,7 @@
                                 <i class="fa-solid fa-circle-play"></i>
                                 <a href="#">Watch Now</a>
                             </div>
-                        <img src="images/Rectangle 5.png" alt="Dinoshor Games">
+                            <img src="images/Rectangle 5.png" alt="Dinoshor Games">
                         </div>
                         <p>Did you score? #unblockedgames #school</p>
                     </div>
@@ -103,7 +109,7 @@
                                 <i class="fa-solid fa-circle-play"></i>
                                 <a href="#">Watch Now</a>
                             </div>
-                        <img src="images/Rectangle 7.png" alt="Mini Uardians">
+                            <img src="images/Rectangle 7.png" alt="Mini Uardians">
                         </div>
                         <p>Breaking game records like OG</p>
                     </div>
@@ -113,7 +119,7 @@
                                 <i class="fa-solid fa-circle-play"></i>
                                 <a href="#">Watch Now</a>
                             </div>
-                        <img src="images/Rectangle 6.png" alt="Looney Tunes Mayhem">
+                            <img src="images/Rectangle 6.png" alt="Looney Tunes Mayhem">
                         </div>
                         <p>Busted gaming on school laptop, but you are still lit.</p>
                     </div>
@@ -122,10 +128,155 @@
             </div>
         </section>
 
+        <!-- product ad section -->
+        <section class="container">
+            <div class="ad-product-container main-margin d-flex jus-con-space-between ali-item-center">
+                <div class="ad-description-section">
+                    <h2>
+                        <span> Play Instantly,</span>
+                        No Downloads
+                        No Installs.
+                    </h2>
+                    <p>
+                        Play games online for free without downloading. Just click the Play button and play instantly in
+                        your browser.
+                    </p>
+                </div>
+
+                <div class="ad-image">
+                    <div>
+                        <img src="images/Rectangle 55.png" alt="3 Rd Anniversary">
+                        <img src="images/Rectangle 66.png" alt="My Talking">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- product ad section -->
+        <section class="container">
+            <div class="ad-product-container position-change main-margin d-flex jus-con-space-between ali-item-center">
+                <div class="ad-description-section">
+                    <h2>
+                        <span>Play Games
+                            <br> Online</span>
+                        Anywhere, Anytime!
+                    </h2>
+                    <p>
+                        PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games
+                        online for free, any time, anywhere , on any device.
+                    </p>
+                </div>
+
+                <div class="ad-image-poiton">
+                    <div>
+                        <img src="images/Rectangle 67.png" alt="3 Rd Anniversary">
+                        <img src="images/Rectangle 78.png" alt="My Talking">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Careers section  -->
+        <section class="care-section-bg">
+            <div class="">
+                <div class="care-container  d-flex jus-con-space-between ali-item-center ">
+                    <div class="care-section-info ">
+                        <div>
+
+                            <h2>Careers</h2>
+                            <p>
+                                Gamer is driven to create the best and most fun games for our millions of players all
+                                around the world, and we,re always on the lookout for more top talent to join our
+                                growing team. If you,d like to help us make great games and be a part of Gamers bright
+                                future, we,d love to hear from you.
+                            </p>
+                        </div>
+
+                        <table>
+                            <tr>
+                                <td>Multimedia Artist +</td>
+                                <td>Lisbon, Portugal</td>
+                            </tr>
+                            <tr>
+                                <td>Data Engineer +</td>
+                                <td>Lisbon, Portugal</td>
+                            </tr>
+                            <tr>
+                                <td>Android engineer +</td>
+                                <td>Zoetermeer, Netherlands</td>
+                            </tr>
+                            <tr>
+                                <td>Server Developer +</td>
+                                <td>Lisbon, Portugal</td>
+                            </tr>
+                            <tr>
+                                <td>Group Financial AccountAnt +</td>
+                                <td>
+                                    London, United Kingdom
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Senior User Acuisition Specialist +</td>
+                                <td>Lisbon, Portugal</td>
+                            </tr>
+                        </table>
+                        <button class="pinmary-btn btn-three"> <span>See all positions</span></button>
+                    </div>
+
+                    <div class="care-section-img">
+                        <img src="images/Group 65.png" alt="Group Img">
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- our servise section -->
+        <section>
+            <div class="service-section">
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+                <div>
+                    <img src="" alt="">
+                    <h3></h3>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
