--- a/index.html
+++ b/index.html
@@ -232,43 +232,43 @@
         </section>
 
         <!-- our servise section -->
-        <section>
-            <div class="service-section">
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+        <section class="container">
+            <div class="service-section main-margin">
+                <div class="services1">
+                    <img src="images/Rectangle 11.png" alt="Action Games">
+                    <h3>Action Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services2">
+                    <img src="images/Rectangle 12.png" alt="Adventure Games">
+                    <h3>Adventure Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services3">
+                    <img src="images/Rectangle 13.png" alt="Arcade Games">
+                    <h3>Arcade Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services4">
+                    <img src="images/Rectangle 14.png" alt="Educational Games">
+                    <h3>Educational Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services5">
+                    <img src="images/Rectangle 15.png" alt="Word Games">
+                    <h3>Word Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services6">
+                    <img src="images/Rectangle 16.png" alt="Role Palying Games">
+                    <h3>Role Palying Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services7">
+                    <img src="images/Rectangle 17.png" alt="Music & Audio Games">
+                    <h3>Music & Audio Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services8">
+                    <img src="images/Rectangle 18.png" alt="Puzzle Games">
+                    <h3>Puzzle Games</h3>
                 </div>
-                <div>
-                    <img src="" alt="">
-                    <h3></h3>
+                <div class="services9">
+                    <img src="images/Rectangle 19.png" alt="Strategy Games">
+                    <h3>Strategy Games</h3>
                 </div>
             </div>
         </section>
