dextop veiw compleated

--- a/index.html
+++ b/index.html
@@ -275,6 +275,45 @@
 
     </main>
     <footer>
+        <!-- footer section -->
+        <section class="footer-bgc">
+            <div class="footer-container container ">
+                <div class="footer-site-icon d-flex ali-item-center jus-con-center">
+                    <img src="images/Frame.png" alt="Game Icon">
+                    <h2> <span>g</span>amer</h2>
+                </div>
+                <div class="footer-menu ">
+                    <ul class="d-flex ali-item-center jus-con-center">
+                        <li><a href="#">Our Story</a></li>
+                        <li><a href="#">Games</a></li>
+                        <li><a href="#">Web Games</a></li>
+                        <li><a href="#">Carers</a></li>
+                        <li><a href="#">Support</a></li>
+                        <li><a href="#">My Account</a></li>
+                    </ul>
+                </div>
+                <div class="footer-social-icon">
+                    <ul class="d-flex ali-item-center jus-con-center">
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-apple"></i></a></li>
+                    </ul>
+                </div>
+                <div class="footer-site-policy">
+                    <ul class="d-flex ali-item-center jus-con-center">
+                        <li><a href="#">Terms and Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
+                        <li><a href="#">Privacy Settings</a></li>
+
+                    </ul>
+                </div>
+                <div class="copy-right-text d-flex ali-item-center jus-con-center"><h4>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</h4></div>
+            </div>
+        </section>
 
     </footer>
 </body>
