banner section responsive degin

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <header>
         <!-- nav section style -->
-        <nav class="nav-section container d-flex jus-con-space-between ali-item-center">
+        <nav class="nav-section container main-mobile-margin d-flex flex-dir-col jus-con-space-between ali-item-center">
             <div class="site-icon d-flex jus-con-center ali-item-center">
                 <img src="images/Frame.png" alt="Game Icon">
                 <h2> <span>g</span>amer</h2>
             </div>
             <div class="nav-menu">
-                <ul class="d-flex ali-item-center jus-con-center">
+                <ul class="d-flex flex-dir-col ali-item-center jus-con-center">
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Developers</a></li>
                     <li><button class="nave-socil-button d-flex jus-con-center ali-item-center">Follow Us On
@@ -37,8 +37,8 @@
     </header>
     <main>
         <!-- banner section  -->
-        <section class="container">
-            <div class="banner-section d-flex jus-con-space-between ali-item-center">
+        <section class="container main-mobile-margin">
+            <div class="banner-section d-flex flex-dir-col jus-con-space-between ali-item-center">
                 <div class="banner-information">
                     <h2>Play Like The</h2>
                     <h3>G.O.A.T.</h3>
@@ -56,7 +56,7 @@
 
         <!-- hero section -->
         <section class="hero-bg">
-            <div class="hero-section d-flex jus-con-space-between ali-item-center container ">
+            <div class="hero-section d-flex flex-dir-col jus-con-space-between ali-item-center container ">
                 <div class="main-margin">
                     <img src="images/pngwing 4.png" alt="Gamer Group">
                 </div>
@@ -77,7 +77,7 @@
         </section>
 
         <!-- site prodact section -->
-        <section class="container">
+        <section class="container " style="display: none;">
             <div class="our-product d-flex jus-con-center ali-item-center main-margin">
                 <h2>Online Games <span>Funny Videos</span></h2>
                 <p>A Collection of Hilarious Videos to Brighten Your Day</p>
@@ -129,7 +129,7 @@
         </section>
 
         <!-- product ad section -->
-        <section class="container">
+        <section class="container" style="display: none;">
             <div class="ad-product-container main-margin d-flex jus-con-space-between ali-item-center">
                 <div class="ad-description-section">
                     <h2>
@@ -153,7 +153,7 @@
         </section>
 
         <!-- product ad section -->
-        <section class="container">
+        <section class="container" style="display: none;">
             <div class="ad-product-container position-change main-margin d-flex jus-con-space-between ali-item-center">
                 <div class="ad-description-section">
                     <h2>
@@ -177,7 +177,7 @@
         </section>
 
         <!-- Careers section  -->
-        <section class="care-section-bg">
+        <section class="care-section-bg" style="display: none;">
             <div class="">
                 <div class="care-container  d-flex jus-con-space-between ali-item-center ">
                     <div class="care-section-info ">
@@ -232,7 +232,7 @@
         </section>
 
         <!-- our servise section -->
-        <section class="container">
+        <section class="container" style="display: none;">
             <div class="service-section main-margin">
                 <div class="services1">
                     <img src="images/Rectangle 11.png" alt="Action Games">
@@ -276,7 +276,7 @@
     </main>
     <footer>
         <!-- footer section -->
-        <section class="footer-bgc">
+        <section class="footer-bgc" style="display: none;">
             <div class="footer-container container ">
                 <div class="footer-site-icon d-flex ali-item-center jus-con-center">
                     <img src="images/Frame.png" alt="Game Icon">
