--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         </section>
 
         <!-- site prodact section -->
-        <section class="container " style="display: none;">
-            <div class="our-product d-flex jus-con-center ali-item-center main-margin">
+        <section class="container ">
+            <div class="our-product d-flex  ali-item-center main-margin">
                 <h2>Online Games <span>Funny Videos</span></h2>
                 <p>A Collection of Hilarious Videos to Brighten Your Day</p>
 
@@ -129,8 +129,8 @@
         </section>
 
         <!-- product ad section -->
-        <section class="container" style="display: none;">
-            <div class="ad-product-container main-margin d-flex jus-con-space-between ali-item-center">
+        <section class="container">
+            <div class="ad-product-container main-margin d-flex flex-dir-col jus-con-space-between ali-item-center">
                 <div class="ad-description-section">
                     <h2>
                         <span> Play Instantly,</span>
@@ -153,7 +153,7 @@
         </section>
 
         <!-- product ad section -->
-        <section class="container" style="display: none;">
+        <section class="container" >
             <div class="ad-product-container position-change main-margin d-flex jus-con-space-between ali-item-center">
                 <div class="ad-description-section">
                     <h2>
@@ -177,9 +177,9 @@
         </section>
 
         <!-- Careers section  -->
-        <section class="care-section-bg" style="display: none;">
+        <section class="care-section-bg">
             <div class="">
-                <div class="care-container  d-flex jus-con-space-between ali-item-center ">
+                <div class="care-container d-flex flex-dir-col jus-con-space-between ali-item-center ">
                     <div class="care-section-info ">
                         <div>
 
@@ -232,7 +232,7 @@
         </section>
 
         <!-- our servise section -->
-        <section class="container" style="display: none;">
+        <section class="container">
             <div class="service-section main-margin">
                 <div class="services1">
                     <img src="images/Rectangle 11.png" alt="Action Games">
@@ -276,7 +276,7 @@
     </main>
     <footer>
         <!-- footer section -->
-        <section class="footer-bgc" style="display: none;">
+        <section class="footer-bgc">
             <div class="footer-container container ">
                 <div class="footer-site-icon d-flex ali-item-center jus-con-center">
                     <img src="images/Frame.png" alt="Game Icon">
